--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'Roboto';
+  src: url('./assets/Roboto-VariableFont_wdth,wght.ttf') format('truetype');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Orbitron';
+  src: url('./assets/Orbitron-VariableFont_wght.ttf') format('truetype');
+  font-display: swap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --CtextoPrincipal: #FFFFFF;
+  --CtextoSecundario: #D3D3D3;
+  --FtextoPrincipal: 'Roboto';
+  --FtextoEncabezado: 'Orbitron';
+  --CfondoPrincipal: #000000;
+  --Cacento1: #1E90FF;
+  --Cacento2: #39FF14;
+  --fondo-p: url('./assets/fotos/fondo.png');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
