--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -893,7 +893,7 @@ form a:hover {
 .fechas-bloque {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
 }
 
 .fecha-evento {
@@ -902,15 +902,19 @@ form a:hover {
     font-family: var(--FtextoEncabezado), sans-serif;
     border-radius: 6px;
     padding: 2px 8px;
-    font-size: 14px;
+    font-size: 11px;
     font-weight: bold;
-    min-width: 60px;
+    min-width: 90px;
     text-align: center;
+    white-space: nowrap;
+    display: inline-block;
 }
+
 
 .evento-info a {
     color: var(--CtextoPrincipal);
     text-decoration: none;
+    padding: 8px;
     font-weight: bold;
     transition: color 0.2s;
 }
