--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -34,7 +34,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    height: auto;
     margin: 0;
 }
 
@@ -75,6 +74,13 @@ p,li, a{
     color: var(--CtextoSecundario);
     margin-bottom: 25px;
 }
+
+main.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 
 /* NAVBAR */
 .navbar {
@@ -1686,6 +1692,40 @@ footer ul li {
     }
 }
 
+@media (max-width: 400px) {
+    .tarjeta-producto {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 10px;
+    }
+
+    .tarjeta-producto img {
+        width: 100px;
+        height: auto;
+        margin-bottom: 8px;
+    }
+
+    .tarjeta-producto h3 {
+        font-size: 1rem;
+        margin: 0;
+    }
+
+    .tarjeta-producto span {
+        font-size: 0.95rem;
+    }
+
+    .tarjeta-producto div {
+        flex-direction: row;
+        justify-content: center;
+        gap: 8px;
+    }
+
+    .tarjeta-producto div button {
+        padding: 4px 8px;
+        font-size: 0.85rem;
+    }
+}
 
 @media (max-width: 900px) {
     .body-eventos {
